Grant "enrollasmentor" to users meeting community's criteria
Bug: T314414
Depends-On: I953826bf0dcbe13f3d210c1b3fbb58f6acc6d306
Change-Id: I77f69637afb4137a6181f5587f4a192d60803e34

--- a/i18n/extension/en.json
+++ b/i18n/extension/en.json
@@ -57,6 +57,11 @@
 	"growthexperiments-edit-config-mentorship-enabled-false": "No",
 	"growthexperiments-edit-config-mentorship-list-of-auto-assigned-mentors": "Page containing list of mentors to be automatically assigned to newcomers",
 	"growthexperiments-edit-config-mentorship-list-of-manually-assigned-mentors": "Page containing list of mentors that can only be assigned manually",
+	"growthexperiments-edit-config-mentorship-automatic-eligibility": "Should users be automatically eligible for mentorship?",
+	"growthexperiments-edit-config-mentorship-automatic-eligibility-true": "Yes, allow users meeting all eligibility criteria below to enroll as mentors.",
+	"growthexperiments-edit-config-mentorship-automatic-eligibility-false": "No, don't allow any users to enroll as mentors.",
+	"growthexperiments-edit-config-mentorship-minimum-age": "Minimum number of days users should be registered for to be eligible for mentorship",
+	"growthexperiments-edit-config-mentorship-minimum-editcount": "Minimum number of edits users need to be eligible for mentorship",
 	"growthexperiments-edit-config-newcomertasks": "Suggested edits",
 	"growthexperiments-edit-config-newcomer-tasks-description": "Some types of suggested edits are surfaced through maintenance templates. Articles containing those templates are added to the feed. To see how many articles are available for each type of task, see [[Special:NewcomerTasksInfo|this page]].",
 	"growthexperiments-edit-config-newcomer-tasks-disabled": "Disabled",
