--- a/i18n/extension/qqq.json
+++ b/i18n/extension/qqq.json
@@ -68,6 +68,11 @@
 	"growthexperiments-edit-config-mentorship-enabled-false": "Description of a form field in Special:EditGrowthConfig\n{{identical|No}}\n\n{{doc-growthexperiments-community-configuration}}",
 	"growthexperiments-edit-config-mentorship-list-of-auto-assigned-mentors": "Description of a form field in Special:EditGrowthConfig\n\n{{doc-growthexperiments-community-configuration}}",
 	"growthexperiments-edit-config-mentorship-list-of-manually-assigned-mentors": "Description of a form field in Special:EditGrowthConfig\n\n{{doc-growthexperiments-community-configuration}}",
+	"growthexperiments-edit-config-mentorship-automatic-eligibility": "Description of a form field in Special:EditGrowthConfig\n\n{{doc-growthexperiments-community-configuration}}",
+	"growthexperiments-edit-config-mentorship-automatic-eligibility-true": "Description of a form field in Special:EditGrowthConfig\n{{identical|Yes}}\n\n{{doc-growthexperiments-community-configuration}}",
+	"growthexperiments-edit-config-mentorship-automatic-eligibility-false": "Description of a form field in Special:EditGrowthConfig\n{{identical|No}}\n\n{{doc-growthexperiments-community-configuration}}",
+	"growthexperiments-edit-config-mentorship-minimum-age": "Description of a form field in Special:EditGrowthConfig\n\n{{doc-growthexperiments-community-configuration}}",
+	"growthexperiments-edit-config-mentorship-minimum-editcount": "Description of a form field in Special:EditGrowthConfig\n\n{{doc-growthexperiments-community-configuration}}",
 	"growthexperiments-edit-config-newcomertasks": "Subheader in Special:EditGrowthConfig\n\n{{doc-growthexperiments-community-configuration}}",
 	"growthexperiments-edit-config-newcomer-tasks-description": "Description of the newcomer tasks section in Special:EditGrowthConfig\n\n{{doc-growthexperiments-community-configuration}}",
 	"growthexperiments-edit-config-newcomer-tasks-disabled": "Label of option to disable newcomer task in Special:EditGrowthConfig\n\n{{doc-growthexperiments-community-configuration}}\n{{Identical|Disabled}}",
