Add GENDER to welcome survey messages
Change-Id: Ie7de67299d9016aa3d98381dd8630cbafde603e5

--- a/i18n/welcomesurvey/en.json
+++ b/i18n/welcomesurvey/en.json
@@ -3,13 +3,13 @@
 		"authors": []
 	},
 	"welcomesurvey": "{{GENDER:$1|Welcome}}, $1!",
-	"welcomesurvey-save-confirmation-title": "Thanks! Your responses have been saved.",
-	"welcomesurvey-save-confirmation-text": "Your answers will help us give you useful ways to get started on Wikipedia.",
-	"welcomesurvey-subtitle": "Help us improve your Wikipedia experience by answering a few optional questions.",
+	"welcomesurvey-save-confirmation-title": "Thanks! {{GENDER:|Your}} responses have been saved.",
+	"welcomesurvey-save-confirmation-text": "{{GENDER:|Your}} answers will help us give you useful ways to get started on Wikipedia.",
+	"welcomesurvey-subtitle": "Help us improve {{GENDER:|your}} Wikipedia experience by answering a few optional questions.",
 	"welcomesurvey-save-btn": "Finish",
 	"welcomesurvey-skip-btn": "{{GENDER:$1|Skip}} this survey",
 	"welcomesurvey-close-btn": "Close and go back to $1",
-	"welcomesurvey-sidebar-privacy-title": "We value your privacy",
+	"welcomesurvey-sidebar-privacy-title": "We value {{GENDER:|your}} privacy",
 	"welcomesurvey-sidebar-privacy-text": "The Wikimedia Foundation will use {{GENDER:$2|your}} answers to help you start editing {{SITENAME}}. $1.",
 	"welcomesurvey-privacy-policy-link-text": "Learn more about data on new editors",
 	"welcomesurvey-sidebar-editing-title": "Getting started with editing",
@@ -22,7 +22,7 @@
 	"welcomesurvey-sidebar-editing-link3-title": "",
 	"welcomesurvey-sidebar-editing-link4-text": "",
 	"welcomesurvey-sidebar-editing-link4-title": "",
-	"welcomesurvey-question-reason-label": "Why did you create your account today?",
+	"welcomesurvey-question-reason-label": "Why did {{GENDER:|you}} create your account today?",
 	"welcomesurvey-dropdown-option-select-label": "Please select...",
 	"welcomesurvey-question-reason-option-edit-typo-label": "To fix a typo or error in a Wikipedia article",
 	"welcomesurvey-question-reason-option-edit-info-add-change-label": "To add or change information to a Wikipedia article",
@@ -35,18 +35,18 @@
 	"welcomesurvey-question-reason-other-placeholder": "{{GENDER:$1|Enter}} other reason...",
 	"welcomesurvey-question-mentor-info": "We are considering starting a program for more experienced editors to help newer users with editing. {{GENDER:$1|Are you interested}} in being contacted to get help with editing?",
 	"welcomesurvey-question-mentor-label": "Yes, {{GENDER:$1|I’m interested}}",
-	"welcomesurvey-question-edited-label": "Have you ever edited Wikipedia?",
+	"welcomesurvey-question-edited-label": "Have {{GENDER:|you}} ever edited Wikipedia?",
 	"welcomesurvey-question-edited-option-yes-many-label": "Yes, many times",
 	"welcomesurvey-question-edited-option-yes-few-label": "Yes, once or twice",
 	"welcomesurvey-question-edited-option-no-dunno-label": "No, I didn’t know I could edit Wikipedia",
 	"welcomesurvey-question-edited-option-no-other-label": "No, for other reasons",
 	"welcomesurvey-question-edited-option-dont-remember-label": "I don’t remember",
 	"welcomesurvey-question-mailinglist-label": "I want to receive tips via email on how to start editing.",
-	"welcomesurvey-question-mailinglist-help": "Please note that this mailing list is powered by MailChimp, which means MailChimp’s use of your information is governed by their [https://www.intuit.com/privacy/statement/ Privacy Policy] and [https://mailchimp.com/legal/terms/ Terms of Service].",
+	"welcomesurvey-question-mailinglist-help": "Please note that this mailing list is powered by MailChimp, which means MailChimp’s use of {{GENDER:|your}} information is governed by their [https://www.intuit.com/privacy/statement/ Privacy Policy] and [https://mailchimp.com/legal/terms/ Terms of Service].",
 	"welcomesurvey-question-email-label": "Email address (optional)",
-	"welcomesurvey-question-email-placeholder": "Enter your email address...",
-	"welcomesurvey-question-email-help": "We noticed you didn’t enter an email when creating this account. It’s <strong>highly recommended</strong>, since an email is needed for account recovery if you ever lose your password. NOTE: Your email address is not revealed when other users contact you.",
-	"welcomesurvey-question-languages-label": "{{SITENAME}} is available in nearly 300 languages. Are there other languages you read and write in?",
+	"welcomesurvey-question-email-placeholder": "Enter {{GENDER:|your}} email address...",
+	"welcomesurvey-question-email-help": "We noticed {{GENDER:|you}} didn’t enter an email when creating this account. It’s <strong>highly recommended</strong>, since an email is needed for account recovery if you ever lose your password. NOTE: Your email address is not revealed when other users contact you.",
+	"welcomesurvey-question-languages-label": "{{SITENAME}} is available in nearly 300 languages. Are there other languages {{GENDER:|you}} read and write in?",
 	"welcomesurvey-question-languages-placeholder": "Add up to {{PLURAL:$1|one language|$1 languages}}...",
-	"welcomesurvey-question-languages-maximum": "You have added the maximum number of languages."
+	"welcomesurvey-question-languages-maximum": "{{GENDER:|You}} have added the maximum number of languages."
 }
