MenteeOverview: Do not use mw: for linking to MW.org
The Popups extension is unable to determine the link
is external, because it is not possible to parse
links like [[:mw:Growth]] from the JS due to lack
of interwiki table on the client side.

Instead of using [[:mw:Growth]] type of links, use
[https://mediawiki.org/wiki/Growth Growth] links. This
makes mediawiki.jqueryMsg to add class="external",
which in turns stops Popups extension from triggering
the popup (see extensions/Popups:src/index.js:32, where
it excludes selector `.external`).

Bug: T312248
Change-Id: Ia5f205f85bd910f70c0fc7d34da57e95b49cfe29

--- a/i18n/mentorship/en.json
+++ b/i18n/mentorship/en.json
@@ -12,7 +12,7 @@
 	"growthexperiments-mentor-dashboard-mentee-overview-no-js-fallback": "The table requires JavaScript. Please enable JavaScript to be able to use this module.",
 	"growthexperiments-mentor-dashboard-mentee-overview-info-headline": "Who is in {{GENDER:|your}} table?",
 	"growthexperiments-mentor-dashboard-mentee-overview-info-icon-label": "More information about who is in {{GENDER:|your}} table",
-	"growthexperiments-mentor-dashboard-mentee-overview-info-text": "This table shows {{GENDER:|your}} mentees whose account was created within the past two weeks or who have edited in the last six months, and have the [[:mw:Special:MyLanguage/Growth/Feature_summary#NH|newcomer homepage enabled]]. Data is updated every three hours.",
+	"growthexperiments-mentor-dashboard-mentee-overview-info-text": "This table shows {{GENDER:|your}} mentees whose account was created within the past two weeks or who have edited in the last six months, and have the [https://mediawiki.org/wiki/Special:MyLanguage/Growth/Feature_summary#NH newcomer homepage enabled]. Data is updated every three hours.",
 	"growthexperiments-mentor-dashboard-mentee-overview-info-legend-headline": "Legend",
 	"growthexperiments-mentor-dashboard-mentee-overview-info-legend-star": "Bookmark mentees",
 	"growthexperiments-mentor-dashboard-mentee-overview-info-legend-userinfo": "Username",
