MenteeOverview: Change messages displayed when no mentees are found
There are two kind of "No mentees" messages:

  1) Mentor has some mentees assigned, but they do not see
     them now, because of filters they configured.
  2) Mentor has no recently active mentees assigned, and
     they will see zero results.

In the first case, we need to ask the mentor to change
their filters. In the second case, they need to wait
(or claim users who were active recently).

Also, remove the bold style from paragraph (inspired by
what the new Vue version currently does).

Bug: T313261
Change-Id: I6c30589d9333a0022ac757602976c51fe9ad62fc

--- a/i18n/mentorship/en.json
+++ b/i18n/mentorship/en.json
@@ -43,8 +43,8 @@
 	"growthexperiments-mentor-dashboard-mentee-overview-page-next-icon-label": "Next page of results",
 	"growthexperiments-mentor-dashboard-mentee-overview-page-prev-icon-label": "Previous page of results",
 	"growthexperiments-mentor-dashboard-mentee-overview-unstar-mentee-icon-label": "Unstar mentee",
-	"growthexperiments-mentor-dashboard-mentee-overview-empty-screen-no-mentees-headline": "Mentee data unavailable",
-	"growthexperiments-mentor-dashboard-mentee-overview-empty-screen-no-mentees-text": "You may not have any mentees assigned yet. Data is updated every three hours.",
+	"growthexperiments-mentor-dashboard-mentee-overview-empty-screen-no-mentees-headline": "No recently active mentees found",
+	"growthexperiments-mentor-dashboard-mentee-overview-empty-screen-no-mentees-text": "The mentor dashboard only shows recently active mentees. More information can be displayed via the info icon. If {{GENDER:|you}} recently enrolled into mentorship, {{GENDER:|you}} might have no mentees assigned yet.",
 	"growthexperiments-mentor-dashboard-mentee-overview-empty-screen-filters-headline": "No mentees found",
 	"growthexperiments-mentor-dashboard-mentee-overview-empty-screen-filters-text": "Change your filters to find mentees.",
 	"growthexperiments-mentor-dashboard-resources-headline": "Resources",
