--- a/i18n/mentorship/en.json
+++ b/i18n/mentorship/en.json
@@ -123,6 +123,13 @@
 	"growthexperiments-manage-mentors-username": "Username",
 	"growthexperiments-manage-mentors-last-active": "Last active",
 	"growthexperiments-manage-mentors-intro-msg": "Message for newcomers",
+	"growthexperiments-manage-mentors-edit": "Edit",
+	"growthexperiments-manage-mentors-edit-pretext": "{{GENDER:|You}} are about to edit the mentorship-related options for {{GENDER:$1|mentor}} [[User:$1|$1]].",
+	"growthexperiments-manage-mentors-edit-intro-msg": "Introduction message",
+	"growthexperiments-manage-mentors-edit-is-auto-assigned": "Is automatically assigned to newcomers?",
+	"growthexperiments-manage-mentors-edit-weight": "Weight",
+	"growthexperiments-manage-mentors-edit-reason": "Reason",
+	"growthexperiments-manage-mentors-edit-success": "Mentorship-related options for {{GENDER:$1|mentor}} [[User:$1|$1]] were changed.",
 	"growthexperiments-manage-mentors-remove-mentor": "Remove",
 	"growthexperiments-manage-mentors-remove-mentor-pretext": "{{GENDER:|You}} are about to remove [[User:$1|$1]] as a {{GENDER:$1|mentor}}.",
 	"growthexperiments-manage-mentors-remove-mentor-reason": "Reason for removing the mentor",
