MentorTools: Make the link to QuitMentorship easier to find
This replaces the info icon in the Mentor tools module
with an ellipsis menu widget, to make it more obvious
that it empowers mentors to take a specific action.

We decided against putting it into the "Status" dropdown,
so we don't accidentally tell mentors to quit, when a temporary
mentoring-vacation is what they were originally looking for.

Bug: T312122
Change-Id: I2f10598e02b5059c8016c70cb18c9fc768f64b42

--- a/i18n/mentorship/en.json
+++ b/i18n/mentorship/en.json
@@ -55,8 +55,9 @@
 	"growthexperiments-mentor-dashboard-resources-link-claim-mentee": "How to claim a mentee",
 	"growthexperiments-mentor-dashboard-resources-link-tools": "Growth tools",
 	"growthexperiments-mentor-dashboard-mentor-tools-headline": "Settings",
-	"growthexperiments-mentor-dashboard-mentor-tools-info-headline": "Mentoring information",
-	"growthexperiments-mentor-dashboard-mentor-tools-info-text": "This module contains settings for {{GENDER:|your}} mentor status. If however, {{GENDER:|you}} wish to quit mentoring permanently, instructions on how to do so are on the following page: [[Special:QuitMentorship|How to quit mentoring?]]",
+	"growthexperiments-mentor-dashboard-mentor-tools-cog-menu-quit": "Quit mentorship",
+	"growthexperiments-mentor-dashboard-mentor-tools-cog-menu-quit-headline": "Do {{GENDER:|you}} want to quit mentorship?",
+	"growthexperiments-mentor-dashboard-mentor-tools-cog-menu-quit-text": "If {{GENDER:|you}} wish to quit mentoring permanently, you can do so via Special:QuitMentorship. Clicking \"OK\" will redirect you there.",
 	"growthexperiments-mentor-dashboard-mentor-tools-mentor-status-headline": "Mentor status",
 	"growthexperiments-mentor-dashboard-mentor-tools-mentor-status-active": "Active",
 	"growthexperiments-mentor-dashboard-mentor-tools-mentor-status-away": "Away",
