--- a/i18n/mentorship/qqq.json
+++ b/i18n/mentorship/qqq.json
@@ -61,8 +61,9 @@
 	"growthexperiments-mentor-dashboard-resources-link-claim-mentee": "Description for a link in the \"Resources\" mentor dashboard module.\nhttps://www.mediawiki.org/wiki/Help:Growth/Tools/How_to_claim_a_mentee\nSee also: {{int:MediaWiki:Growthexperiments-homepage-claimmentee-title}}\n\n{{doc-growthexperiments-mentor-dashboard}}",
 	"growthexperiments-mentor-dashboard-resources-link-tools": "Description for a link in the \"Resources\" mentor dashboard module.\n\n{{doc-growthexperiments-mentor-dashboard}}",
 	"growthexperiments-mentor-dashboard-mentor-tools-headline": "Headline for the \"Mentor tools\" mentor dashboard module.\n\n{{doc-growthexperiments-mentor-dashboard}}",
-	"growthexperiments-mentor-dashboard-mentor-tools-info-headline": "Headline in the info icon popup for \"Mentor tools\" module.\n\n{{doc-growthexperiments-mentor-dashboard}}",
-	"growthexperiments-mentor-dashboard-mentor-tools-info-text": "Contents of the info icon popup for \"Mentor tools\" module.\n\n{{doc-growthexperiments-mentor-dashboard}}",
+	"growthexperiments-mentor-dashboard-mentor-tools-cog-menu-quit": "Option in the ellipsis menu for \"Mentor tools\" module.\n\n{{doc-growthexperiments-mentor-dashboard}}",
+	"growthexperiments-mentor-dashboard-mentor-tools-cog-menu-quit-headline": "Headline of the quit mentorship dialog in the \"Mentor tools\" module.\n\n{{doc-growthexperiments-mentor-dashboard}}",
+	"growthexperiments-mentor-dashboard-mentor-tools-cog-menu-quit-text": "Text of the quit mentorship dialog in the \"Mentor tools\" module.\n\n{{doc-growthexperiments-mentor-dashboard}}",
 	"growthexperiments-mentor-dashboard-mentor-tools-mentor-status-headline": "Subheader in the \"Mentor tools\" mentor dashboard module\n\n{{doc-growthexperiments-mentor-dashboard}}",
 	"growthexperiments-mentor-dashboard-mentor-tools-mentor-status-active": "Label in the \"Mentor tools\" mentor dashboard module\n\n{{doc-growthexperiments-mentor-dashboard}}\n\n{{identical|Active}}",
 	"growthexperiments-mentor-dashboard-mentor-tools-mentor-status-away": "Label in the \"Mentor tools\" mentor dashboard module\n\n{{doc-growthexperiments-mentor-dashboard}}",
