--- a/i18n/homepage/en.json
+++ b/i18n/homepage/en.json
@@ -63,6 +63,8 @@
 	"growthexperiments-homepage-new-impact-header": "{{GENDER:$1|Your}} impact",
 	"growthexperiments-homepage-new-impact-no-js-fallback": "Please enable JavaScript to view this component.",
 	"growthexperiments-homepage-impact-header": "{{GENDER:$1|Your}} impact",
+	"growthexperiments-homepage-impact-scores-edit-count": "Total edits",
+	"growthexperiments-homepage-impact-scores-thanks-count": "Thanks received",
 	"growthexperiments-homepage-impact-subheader-text": "People are viewing the articles {{GENDER:$1|you}} edited!",
 	"growthexperiments-homepage-impact-subheader-subtext": "Views since {{GENDER:$1|you}} edited (last 60 days):",
 	"growthexperiments-homepage-impact-contributions-link": "{{GENDER:$2|You've}} made <strong>$1</strong> {{PLURAL:$1|edit|edits}} (see all)",
