--- a/i18n/homepage/en.json
+++ b/i18n/homepage/en.json
@@ -63,6 +63,12 @@
 	"growthexperiments-homepage-new-impact-header": "{{GENDER:$1|Your}} impact",
 	"growthexperiments-homepage-new-impact-no-js-fallback": "Please enable JavaScript to view this component.",
 	"growthexperiments-homepage-impact-header": "{{GENDER:$1|Your}} impact",
+	"growthexperiments-homepage-impact-recent-activity-title": "{{GENDER:$1|Your}} recent activity",
+	"growthexperiments-homepage-impact-recent-activity-last-edit-text": "Last edited: $1",
+	"growthexperiments-homepage-impact-recent-activity-best-streak-text": "Best streak: $1",
+	"growthexperiments-homepage-impact-recent-activity-streak-count-text": "$1 days in a row",
+	"growthexperiments-homepage-impact-recent-activity-contribs-count-text": "{{PLURAL:$1|Edit|Edits}}",
+	"growthexperiments-homepage-impact-recent-activity-streak-data-text": "$1 {{PLURAL:$1|edit|edits}} on $2",
 	"growthexperiments-homepage-impact-scores-edit-count": "Total edits",
 	"growthexperiments-homepage-impact-scores-thanks-count": "Thanks received",
 	"growthexperiments-homepage-impact-subheader-text": "People are viewing the articles {{GENDER:$1|you}} edited!",
