SpecialManageMentors: Add a introductory message
This is to explain what the page is, where the underlying
data store is and what options it unlocks.

It also tells visitors how they can enroll.

Bug: T318274
Change-Id: I97f062b69934c1e1823b51a13333c48c210f4609

--- a/i18n/mentorship/en.json
+++ b/i18n/mentorship/en.json
@@ -118,6 +118,11 @@
 	"growthexperiments-mentor-writer-error-anonymous-user": "Mentor $1 is not a registered user",
 	"growthexperiments-mentor-writer-error-message-too-long": "Introduction message is too long (affected user ID: $2). Maximum length is $1.",
 	"growthexperiments-manage-mentors-title": "Manage mentors",
+	"growthexperiments-manage-mentors-pretext-purpose": "This page shows a list of mentors.",
+	"growthexperiments-manage-mentors-pretext-privileged": "{{GENDER:|You}} can remove mentors that violate community standards or policies or edit their mentorship-related options.",
+	"growthexperiments-manage-mentors-pretext-regular": "Administrators can remove mentors that violate community standards or policies. They can also edit their mentorship-related options, such as their introduction message.",
+	"growthexperiments-manage-mentors-pretext-stored-at": "The list of mentors is stored in [[$1|MediaWiki namespace]], including history.",
+	"growthexperiments-manage-mentors-pretext-to-enroll": "To enroll as a mentor, go to [[Special:EnrollAsMentor]].",
 	"growthexperiments-manage-mentors-error-no-such-user": "Error: No such user with ID of $1 exists. This is probably an internal error.",
 	"growthexperiments-manage-mentors-auto-assigned": "Automatically assigned mentors",
 	"growthexperiments-manage-mentors-manually-assigned": "Manually assigned mentors",
