--- a/i18n/mentorship/qqq.json
+++ b/i18n/mentorship/qqq.json
@@ -124,6 +124,11 @@
 	"growthexperiments-mentor-writer-error-anonymous-user": "Error message displayed when a change to MediaWiki:GrowthMentors.json (configurable by <code>GEStructuredMentorList</code>) tries to remove/change a mentor who is not in the list",
 	"growthexperiments-mentor-writer-error-message-too-long": "Error message displayed when a change to MediaWiki:GrowthMentors.json (configurable by <code>GEStructuredMentorList</code>) tries to set a message longer than the allowed limit. Parameters:\n* $1 - maximum allowed message length\n* $2 - user ID of the affected mentor",
 	"growthexperiments-manage-mentors-title": "Headline of Special:ManageMentors",
+	"growthexperiments-manage-mentors-pretext-purpose": "Introductory text shown at Special:ManageMentors.",
+	"growthexperiments-manage-mentors-pretext-privileged": "Introductory text shown at Special:ManageMentors. Only shown to admin users.",
+	"growthexperiments-manage-mentors-pretext-regular": "Introductory text shown at Special:ManageMentors. Only shown to non-admin users.",
+	"growthexperiments-manage-mentors-pretext-stored-at": "Introductory text shown at Special:ManageMentors.",
+	"growthexperiments-manage-mentors-pretext-to-enroll": "Introductory text shown at Special:ManageMentors.",
 	"growthexperiments-manage-mentors-error-no-such-user": "Error message shown by Special:ManageMentors when a given mentor does not exist. This message only shows if user manually changes their URL address, or when links in the interface are incorrect.",
 	"growthexperiments-manage-mentors-auto-assigned": "Headline in Special:ManageMentors",
 	"growthexperiments-manage-mentors-manually-assigned": "Headline in Special:ManageMentors",
