SpecialEditGrowthConfig: Clarify mentorship eligibility messages
Bug: T318546
Change-Id: I4f001cc4805f7bf743368125e614cf9919297e93

--- a/i18n/extension/en.json
+++ b/i18n/extension/en.json
@@ -60,8 +60,8 @@
 	"growthexperiments-edit-config-mentorship-automatic-eligibility": "Should users be automatically eligible for mentorship?",
 	"growthexperiments-edit-config-mentorship-automatic-eligibility-true": "Yes, allow users meeting all eligibility criteria below to enroll as mentors.",
 	"growthexperiments-edit-config-mentorship-automatic-eligibility-false": "No, don't allow any users to enroll as mentors.",
-	"growthexperiments-edit-config-mentorship-minimum-age": "Minimum number of days users should be registered for to be eligible for mentorship",
-	"growthexperiments-edit-config-mentorship-minimum-editcount": "Minimum number of edits users need to be eligible for mentorship",
+	"growthexperiments-edit-config-mentorship-minimum-age": "Minimum number of days a user must be registered to sign up as a mentor",
+	"growthexperiments-edit-config-mentorship-minimum-editcount": "Minimum number of edits a user must have made (on any namespace) to sign up as a mentor",
 	"growthexperiments-edit-config-newcomertasks": "Suggested edits",
 	"growthexperiments-edit-config-newcomer-tasks-description": "Some types of suggested edits are surfaced through maintenance templates. Articles containing those templates are added to the feed. To see how many articles are available for each type of task, see [[Special:NewcomerTasksInfo|this page]].",
 	"growthexperiments-edit-config-newcomer-tasks-disabled": "Disabled",
