MentorStatusManager: Mark blocked mentors as away
Bug: T318819
Change-Id: I0f43de0dae625f93046b82bf64f1026aafbcf7b6

--- a/i18n/mentorship/qqq.json
+++ b/i18n/mentorship/qqq.json
@@ -68,6 +68,8 @@
 	"growthexperiments-mentor-dashboard-mentor-tools-mentor-status-active": "Label in the \"Mentor tools\" mentor dashboard module\n\n{{doc-growthexperiments-mentor-dashboard}}\n\n{{identical|Active}}",
 	"growthexperiments-mentor-dashboard-mentor-tools-mentor-status-away": "Label in the \"Mentor tools\" mentor dashboard module\n\n{{doc-growthexperiments-mentor-dashboard}}",
 	"growthexperiments-mentor-dashboard-mentor-tools-mentor-status-away-message": "Message shown in the \"Mentor tools\" mentor dashboard module if the mentor is currently away.\n\nParameters:\n* $1 - date of the mentor came back\n\n{{doc-growthexperiments-mentor-dashboard}}",
+	"growthexperiments-mentor-dashboard-mentor-tools-mentor-status-away-block": "Message shown in the \"Mentor tools\" mentor dashboard module if the mentor is currently away due to a block.\n\n{{doc-growthexperiments-mentor-dashboard}}",
+	"growthexperiments-mentor-dashboard-mentor-tools-mentor-status-error-cannot-be-changed-block": "Error message displayed when an user attempts to modify their status while being blocked.\n\n{{doc-growthexperiments-mentor-dashboard}}",
 	"growthexperiments-mentor-dashboard-mentor-tools-away-dialog-headline": "Label in the \"Pause mentoring\" dialog in mentor dashboard's mentor tools module\n\n{{doc-growthexperiments-mentor-dashboard}}",
 	"growthexperiments-mentor-dashboard-mentor-tools-away-dialog-cancel": "Label in the \"Pause mentoring\" dialog in mentor dashboard's mentor tools module\n\n{{doc-growthexperiments-mentor-dashboard}}\n\n{{identical|Cancel}}",
 	"growthexperiments-mentor-dashboard-mentor-tools-away-dialog-submit": "Label in the \"Pause mentoring\" dialog in mentor dashboard's mentor tools module\n\n{{doc-growthexperiments-mentor-dashboard}}",
