User impact: create articles edited trend chart
* Add a minified version of d3.js as a foreign
resource used in ext.growthExperiments.d3 module. The
module will only be registered in onResourceLoaderRegisterModules
if GENewImpactD3Enabled is set to true. The client checks the
same GENewImpactD3Enabled config and try to load the module accordingly.
* Set a fixed width on the c-sparkline component since using
the parent or element width does not work for async components and
how we render the module inside the MobileFrontend overlay.
* Rename index.js to conventional init.js for application boot.

Bug: T310660
Change-Id: Id3aaf430f73aef7ce0de40bb493aea12c4fc8add

--- a/i18n/homepage/en.json
+++ b/i18n/homepage/en.json
@@ -69,6 +69,7 @@
 	"growthexperiments-homepage-impact-recent-activity-streak-count-text": "$1 {{PLURAL:$1|day|days}}",
 	"growthexperiments-homepage-impact-recent-activity-contribs-count-text": "{{PLURAL:$1|Edit|Edits}}",
 	"growthexperiments-homepage-impact-recent-activity-streak-data-text": "$1 {{PLURAL:$1|edit|edits}} on $2",
+	"growthexperiments-homepage-impact-edited-articles-trend-chart-count-label": "Views on articles {{GENDER:$1|you've}} edited",
 	"growthexperiments-homepage-impact-scores-edit-count": "Total edits",
 	"growthexperiments-homepage-impact-scores-thanks-count": "Thanks received",
 	"growthexperiments-homepage-impact-scores-thanks-info-text": "{{SITENAME}} is created by a community of editors like {{GENDER:$1|you}}. {{GENDER:$1|You}} may be thanked by another contributor for an edit {{GENDER:$1|you’ve}} made, and {{GENDER:$1|you}} can thank others for their edits too.",
