ManageMentorsEditMentor: Work well with blocked mentors
ManageMentorsEditMentor assumed that mentor is away if
and only if the away timestamp is set. With T318819,
we now consider blocked mentors as permanently away.

Reflect that in the ManageMentorsEditMentor form.

Bug: T318819
Change-Id: I70f2e237604dfe2bf68f4ab43e748c03157f0b05

--- a/i18n/mentorship/en.json
+++ b/i18n/mentorship/en.json
@@ -138,6 +138,7 @@
 	"growthexperiments-manage-mentors-edit-is-auto-assigned": "Is automatically assigned to newcomers?",
 	"growthexperiments-manage-mentors-edit-weight": "Weight",
 	"growthexperiments-manage-mentors-edit-is-away": "Is away?",
+	"growthexperiments-manage-mentors-edit-is-away-blocked": "Mentor \"$1\" is currently blocked, and their away status cannot be changed.",
 	"growthexperiments-manage-mentors-edit-away-until": "Away until",
 	"growthexperiments-manage-mentors-edit-reason": "Reason",
 	"growthexperiments-manage-mentors-edit-success": "Mentorship-related options for {{GENDER:$1|mentor}} [[User:$1|$1]] were changed.",
