User impact: display best streak data in scorecards
As per requirement discussion in T310666#8308514, moving
the best streak data to the summary panel. Create useUserImpact
to have all computed values in a single place.

Bug: T310665
Change-Id: I4acd8090d9f94decb326659cc49ff36ef71aee0a

--- a/i18n/homepage/en.json
+++ b/i18n/homepage/en.json
@@ -64,9 +64,9 @@
 	"growthexperiments-homepage-new-impact-no-js-fallback": "Please enable JavaScript to view this component.",
 	"growthexperiments-homepage-impact-header": "{{GENDER:$1|Your}} impact",
 	"growthexperiments-homepage-impact-recent-activity-title": "{{GENDER:$1|Your}} recent activity (last $2 {{PLURAL:$2|day|days}})",
-	"growthexperiments-homepage-impact-recent-activity-last-edit-text": "Last edited: $1",
-	"growthexperiments-homepage-impact-recent-activity-best-streak-text": "Best streak: $1",
-	"growthexperiments-homepage-impact-recent-activity-streak-count-text": "$1 {{PLURAL:$1|day|days}} in a row",
+	"growthexperiments-homepage-impact-recent-activity-last-edit-text": "Last edited",
+	"growthexperiments-homepage-impact-recent-activity-best-streak-text": "Best streak",
+	"growthexperiments-homepage-impact-recent-activity-streak-count-text": "$1 {{PLURAL:$1|day|days}}",
 	"growthexperiments-homepage-impact-recent-activity-contribs-count-text": "{{PLURAL:$1|Edit|Edits}}",
 	"growthexperiments-homepage-impact-recent-activity-streak-data-text": "$1 {{PLURAL:$1|edit|edits}} on $2",
 	"growthexperiments-homepage-impact-scores-edit-count": "Total edits",
