SpecialEditGrowthConfig: Update description of "Mentorship"
SpecialEditGrowthConfig's previous description of "Mentorship"
did not take structured mentor list into account.

Add a separate description message for structured mentor list.

Bug: T321057
Change-Id: I6f0211934f49b91a7cf2102e362cdfe3be150ed8

--- a/i18n/extension/en.json
+++ b/i18n/extension/en.json
@@ -51,7 +51,8 @@
 	"growthexperiments-edit-config-homepage-intro-links-create": "Destination page for a link about creating a new article",
 	"growthexperiments-edit-config-homepage-intro-links-image": "Destination page for a link about how to add images in the visual editor",
 	"growthexperiments-edit-config-mentorship": "Mentorship",
-	"growthexperiments-edit-config-mentorship-description": "Wikis can have two separate mentor lists: one for mentors that get randomly assigned to all newcomers, and another for mentors that do not get randomly assigned, but can claim mentees. This second list is used for mentors that only want to be mentors to people from events or classes.",
+	"growthexperiments-edit-config-mentorship-description-wikitext": "Wikis can have two separate mentor lists: one for mentors that get randomly assigned to all newcomers, and another for mentors that do not get randomly assigned, but can claim mentees. This second list is used for mentors that only want to be mentors to people from events or classes.",
+	"growthexperiments-edit-config-mentorship-description-structured": "Mentors can have two roles. By default, they are randomly assigned to newcomers. An option exists for mentors that only want to be mentors to people from events or classes: they don't get any newcomers assigned to them, but they can claim them.\n\nThe ideal number of mentors is: one mentor for each group of 500 new accounts, with a minimum of 3 mentors.\n\n[[mw:Special:MyLanguage/Growth/FAQ#Mentorship|Know more about how mentorship works]]",
 	"growthexperiments-edit-config-mentorship-enabled": "Are mentorship features enabled?",
 	"growthexperiments-edit-config-mentorship-enabled-true": "Yes",
 	"growthexperiments-edit-config-mentorship-enabled-false": "No",
