User impact: add infoboxes to thanks and streak scorecards
* Use CInfoBox to display an informational popover
along thanks received and best streak scorecards.
* Do not set width in the CPopper component so the width
of the overlay container is determined by its content.
* Adapt the date format for the streak so it shows
the year for streaks in the past years

Bug: T310665
Change-Id: I7f4fbf656886547f961b08a51ea77340bcb88a8e

--- a/i18n/homepage/en.json
+++ b/i18n/homepage/en.json
@@ -65,12 +65,15 @@
 	"growthexperiments-homepage-impact-header": "{{GENDER:$1|Your}} impact",
 	"growthexperiments-homepage-impact-recent-activity-title": "{{GENDER:$1|Your}} recent activity (last $2 {{PLURAL:$2|day|days}})",
 	"growthexperiments-homepage-impact-recent-activity-last-edit-text": "Last edited",
-	"growthexperiments-homepage-impact-recent-activity-best-streak-text": "Best streak",
+	"growthexperiments-homepage-impact-recent-activity-best-streak-text": "Longest streak",
 	"growthexperiments-homepage-impact-recent-activity-streak-count-text": "$1 {{PLURAL:$1|day|days}}",
 	"growthexperiments-homepage-impact-recent-activity-contribs-count-text": "{{PLURAL:$1|Edit|Edits}}",
 	"growthexperiments-homepage-impact-recent-activity-streak-data-text": "$1 {{PLURAL:$1|edit|edits}} on $2",
 	"growthexperiments-homepage-impact-scores-edit-count": "Total edits",
 	"growthexperiments-homepage-impact-scores-thanks-count": "Thanks received",
+	"growthexperiments-homepage-impact-scores-thanks-info-text": "{{SITENAME}} is created by a community of editors like {{GENDER:$1|you}}. {{GENDER:$1|You}} may be thanked by another contributor for an edit {{GENDER:$1|you’ve}} made, and {{GENDER:$1|you}} can thank others for their edits too.",
+	"growthexperiments-homepage-impact-scores-best-streak-info-text": "This is the highest number of days in a row that {{GENDER:$1|you}} made at least one edit.",
+	"growthexperiments-homepage-impact-scores-best-streak-info-data-text": "{{GENDER:$1|Your}} current longest streak is $2 {{PLURAL:$2|day|days}} which {{GENDER:$1|you}} achieved between $3.",
 	"growthexperiments-homepage-impact-subheader-text": "People are viewing the articles {{GENDER:$1|you}} edited!",
 	"growthexperiments-homepage-impact-subheader-subtext": "Views since {{GENDER:$1|you}} edited (last 60 days):",
 	"growthexperiments-homepage-impact-contributions-link": "{{GENDER:$2|You've}} made <strong>$1</strong> {{PLURAL:$1|edit|edits}} (see all)",
